[#2640503] Flink 1.9 Kafka support zti

--- a/flink-connectors/flink-sql-connector-kafka-0.10/pom.xml
+++ b/flink-connectors/flink-sql-connector-kafka-0.10/pom.xml
@@ -53,6 +53,7 @@ under the License.
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
+				<version>${shade.plugin.native.version}</version>
 				<executions>
 					<execution>
 						<id>shade-flink</id>
@@ -80,6 +81,7 @@ under the License.
 									<include>org.codehaus.jackson:jackson-mapper-asl</include>
 									<include>org.codehaus.jackson:jackson-xc</include>
 									<include>com.bytedance:commons</include>
+									<include>org.byted.security:zti-jwt-helper-java</include>
 								</includes>
 							</artifactSet>
 							<filters>
@@ -111,6 +113,14 @@ under the License.
 								<relocation>
 									<pattern>com.bytedance.commons</pattern>
 									<shadedPattern>org.apache.flink.kafka010.shaded.com.bytedance.commons</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>org.byted.security</pattern>
+									<shadedPattern>org.apache.flink.kafka010.shaded.org.byted.security</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>META-INF/native/liborg_byted_security_shaded</pattern>
+									<shadedPattern>META-INF/native/liborg_apache_flink_kafka010_shaded_org_byted_security_shaded</shadedPattern>
 								</relocation>
 							</relocations>
 						</configuration>
