--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -417,6 +417,7 @@ quail:
   high-availability.zookeeper.quorum: 10.129.16.103:2181,10.129.19.99:2181,10.129.36.17:2181,10.129.42.156:2181,10.129.42.93:2181
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
 
 quoll:
   dc: cn
@@ -424,6 +425,7 @@ quoll:
   high-availability.zookeeper.quorum: 10.129.16.103:2181,10.129.19.99:2181,10.129.36.17:2181,10.129.42.156:2181,10.129.42.93:2181
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
 
 quoka:
   dc: cn
@@ -435,6 +437,7 @@ quoka:
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   ipv6.enabled: true
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
+  flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
 
 quaga:
   dc: cn
@@ -445,6 +448,7 @@ quaga:
   bytedance.streaming.yarn.gang-scheduler.container-descheduler.enable: true
   ipv6.enabled: true
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
+  flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
 
 quele:
   dc: cn
@@ -453,6 +457,7 @@ quele:
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   bytedance.streaming.yarn.gang-scheduler.container-descheduler.enable: true
+  flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
 
 camel:
   dc: cn
