[#2640277] The cache supports dynamic adjustment of its own size.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -62,7 +62,11 @@ global:
         numChannelsUpdatedByJM,
         numChannelsUpdatedByTask,
         numChannelsInjectedError,
-        numberOfHdfsRetries
+        numberOfHdfsRetries,
+        numberOfScaleUp,
+        numberOfScaleDown,
+        cacheMinRemainedCapacity,
+        cacheTotalRemainedCapacity
     ]
 
 non-global:
