[#2628028] Add evenly/location prefer scheduler metrics.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -108,6 +108,8 @@ non-global:
       # Task In/Out Pool Usage
         inPoolUsage,
         outPoolUsage,
+      # Task InputChannels number
+        numberOfInputChannels,
       # In/Out Record Number
         numRecordsInPerSecond,
         numRecordsOutPerSecond,
@@ -262,6 +264,7 @@ non-global:
         cacheStats,
       # tm
         taskExecutorExecutionStateTime,
+        numberOfTasks,
       # heartbeat
         RMHeartbeatTimeoutFromJM,
         RMHeartbeatTimeoutFromTM,
