[#2549829]add slotmanager and resourcemanager metrics for edition 1.9

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -82,6 +82,9 @@ non-global:
         numPendingSlotRequests,
         taskSlotsTotal,
         taskSlotsAvailable,
+        numLackSlots,
+        numExcessWorkers,
+        numLackWorkers,
       # Memory
         Used,
         Committed,
