--- a/flink-dist/src/main/flink-bin/kubernetes-conf/flink-conf.yaml
+++ b/flink-dist/src/main/flink-bin/kubernetes-conf/flink-conf.yaml
@@ -106,6 +106,42 @@ common:
   job.work.dir: ${hdfs.prefix}/${clusterName}/1.11/
   pipeline.download-template: "/opt/tiger/flink_deploy/bin/flink download -src '%files%' -dest %target% > /var/log/tiger/flink-download.log 2>&1"
 
+cloudnative-hl:
+  dc: cn
+  clusterName: cloudnative-hl
+  high-availability.zookeeper.quorum: 10.226.22.110:2181,10.226.22.38:2181,10.226.22.84:2181,10.226.22.85:2181,10.226.22.90:2181
+  hdfs.prefix: hdfs://haruna/flink_hl
+  checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  # service & ingress related
+  kubernetes.rest-service.exposed.type: ClusterIP
+  kubernetes.ingress.annotations: "nginx.ingress.kubernetes.io/proxy-body-size:100m,nginx.ingress.kubernetes.io/proxy-connect-timeout:300,nginx.ingress.kubernetes.io/proxy-send-timeout:300,nginx.ingress.kubernetes.io/proxy-read-timeout:300"
+  kubernetes.ingress.enable: true
+  kubernetes.ingress.host: "hl-cloudnative.byted.org"
+
+cloudnative-lf:
+  dc: cn
+  clusterName: cloudnative-lf
+  high-availability.zookeeper.quorum: 10.226.22.110:2181,10.226.22.38:2181,10.226.22.84:2181,10.226.22.85:2181,10.226.22.90:2181
+  hdfs.prefix: hdfs://haruna/flink_lf
+  checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  # service & ingress related
+  kubernetes.rest-service.exposed.type: ClusterIP
+  kubernetes.ingress.annotations: "nginx.ingress.kubernetes.io/proxy-body-size:100m,nginx.ingress.kubernetes.io/proxy-connect-timeout:300,nginx.ingress.kubernetes.io/proxy-send-timeout:300,nginx.ingress.kubernetes.io/proxy-read-timeout:300"
+  kubernetes.ingress.enable: true
+  kubernetes.ingress.host: "lf-cloudnative.byted.org"
+
+cloudnative-lq:
+  dc: cn
+  clusterName: cloudnative-lq
+  high-availability.zookeeper.quorum: 10.226.22.110:2181,10.226.22.38:2181,10.226.22.84:2181,10.226.22.85:2181,10.226.22.90:2181
+  hdfs.prefix: hdfs://haruna/flink_lq
+  checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  # service & ingress related
+  kubernetes.rest-service.exposed.type: ClusterIP
+  kubernetes.ingress.annotations: "nginx.ingress.kubernetes.io/proxy-body-size:100m,nginx.ingress.kubernetes.io/proxy-connect-timeout:300,nginx.ingress.kubernetes.io/proxy-send-timeout:300,nginx.ingress.kubernetes.io/proxy-read-timeout:300"
+  kubernetes.ingress.enable: true
+  kubernetes.ingress.host: "lq-cloudnative.byted.org"
+
 edge:
   dc: cn
   clusterName: edge
@@ -189,13 +225,6 @@ wj:
   high-availability.zookeeper.quorum: 10.8.32.25:2184,10.8.32.68:2184,10.8.32.74:2184,10.8.32.72:2184,10.8.39.142:2184
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/flink_hl
-
-hl:
-  dc: cn
-  clusterName: hl
-  high-availability.zookeeper.quorum: 10.226.22.110:2181,10.226.22.38:2181,10.226.22.84:2181,10.226.22.85:2181,10.226.22.90:2181
-  hdfs.prefix: hdfs://haruna/flink_hl
-  checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
 
 hyrax:
   dc: cn
