[#2627919] add AM start-time metric

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -271,5 +271,7 @@ non-global:
         JMHeartbeatTimeoutFromRM,
         JMHeartbeatTimeoutFromTM,
         TMHeartbeatTimeoutFromRM,
-        TMHeartbeatTimeoutFromJM
+        TMHeartbeatTimeoutFromJM,
+      # am
+        timeOfAMStart
     ]
