--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -426,6 +426,8 @@ quail:
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
 
 quoll:
   dc: cn
@@ -434,6 +436,8 @@ quoll:
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
 
 quoka:
   dc: cn
@@ -448,6 +452,8 @@ quoka:
   bytedance.streaming.cluster.evenly-spread-out-slots: false
   bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
   bytedance.streaming.slot-pool.round-robin: true
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
   execution.cancellation.timeout.enable: true
 
 quaga:
@@ -463,6 +469,8 @@ quaga:
   bytedance.streaming.cluster.evenly-spread-out-slots: false
   bytedance.streaming.jobmanager.slot-sharing-execution-slot-allocator.enabled: true
   bytedance.streaming.slot-pool.round-robin: true
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
 
 quele:
   dc: cn
@@ -472,6 +480,8 @@ quele:
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   bytedance.streaming.yarn.gang-scheduler.container-descheduler.enable: true
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 60000
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
 
 camel:
   dc: cn
