--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,8 @@ under the License.
 		<module>flink-walkthroughs</module>
 		<module>flink-kubernetes</module>
 		<module>flink-external-resources</module>
-	</modules>
+        <module>flink-cloud-shuffle</module>
+    </modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
