--- a/flink-cloud-shuffle/pom.xml
+++ b/flink-cloud-shuffle/pom.xml
@@ -38,6 +38,12 @@ under the License.
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime_${scala.binary.version}</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.bytedance.inf</groupId>
             <artifactId>css-service_${scala.binary.version}</artifactId>
             <version>${css.version}</version>
