[#2730937] Reduce image size (hl:hyrax  lf:larva)

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -304,6 +304,8 @@ larva:
   hdfs.prefix: hdfs://haruna/flink_lf
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
 
 locst:
   dc: cn
@@ -366,6 +368,8 @@ hyrax:
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://hdfsvip/home/byte_flink_checkpoint_20210220
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
+  docker.namespace: yarn
+  docker.image: yarn_runtime_flink:latest
 
 horse:
   dc: cn
