--- a/flink-metrics/flink-metrics-opentsdb/pom.xml
+++ b/flink-metrics/flink-metrics-opentsdb/pom.xml
@@ -48,9 +48,9 @@ under the License.
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.bytedance</groupId>
-			<artifactId>metrics4j</artifactId>
-			<version>${metrics4j.version}</version>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-shaded-metrics4j</artifactId>
+			<version>${metrics4j.version}-${flink.shaded.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.scala-lang</groupId>
