--- a/flink-dist/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j.properties
@@ -42,7 +42,7 @@ appender.main.name = MainAppender
 appender.main.type = RollingFile
 appender.main.append = false
 appender.main.fileName = ${sys:log.file}
-appender.main.filePattern = ${sys:log.file}.%i.log
+appender.main.filePattern = ${sys:log.file}.%i
 appender.main.layout.type = PatternLayout
 appender.main.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %-60t %x - %m%n
 appender.main.policies.type = Policies
