[#2926678] Fix SlotPoolImpl IndexOutOfBoundsException Error and add more metric.

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -72,6 +72,7 @@ global:
         nettyShuffleInputBytes,
         cloudShuffleOutputBytes,
         cloudShuffleInputBytes
+        allocateFromAvailableFailedNumber
     ]
 
 non-global:
