[#2848590] Build Shuffle metrics for CSS and Netty Shuffle

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -67,7 +67,11 @@ global:
         numberOfScaleUp,
         numberOfScaleDown,
         cacheMinRemainedCapacity,
-        cacheTotalRemainedCapacity
+        cacheTotalRemainedCapacity,
+        nettyShuffleOutputBytes,
+        nettyShuffleInputBytes,
+        cloudShuffleOutputBytes,
+        cloudShuffleInputBytes
     ]
 
 non-global:
