--- a/flink-cloud-shuffle/pom.xml
+++ b/flink-cloud-shuffle/pom.xml
@@ -77,10 +77,6 @@ under the License.
                     <artifactId>guava</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.apache.commons</groupId>
-                    <artifactId>commons-lang3</artifactId>
-                </exclusion>
-                <exclusion>
                     <groupId>org.fusesource.leveldbjni</groupId>
                     <artifactId>leveldbjni-all</artifactId>
                 </exclusion>
@@ -130,6 +126,11 @@ under the License.
                 </exclusion>
             </exclusions>
         </dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
     </dependencies>
 
     <build>
