--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -817,6 +817,9 @@ gaura-hl:
   hdfs.prefix: hdfs://haruna/flink_hl
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   containerized.taskmanager.env.METRICS_USE_SOCK: true
+  # todo only add MALLOC_ARENA_MAX in k8s now, because YARN already set this env which will cause overlapping problem
+  containerized.master.env.MALLOC_ARENA_MAX: 4
+  containerized.taskmanager.env.MALLOC_ARENA_MAX: 4
   metrics.reporter.opentsdb_reporter.use_domain_sock: true
   # service & ingress related
   kubernetes.rest-service.exposed.type: ClusterIP
@@ -836,6 +839,8 @@ cloudnative-lf:
   hdfs.prefix: hdfs://haruna/flink_lf
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   containerized.taskmanager.env.METRICS_USE_SOCK: true
+  containerized.master.env.MALLOC_ARENA_MAX: 4
+  containerized.taskmanager.env.MALLOC_ARENA_MAX: 4
   metrics.reporter.opentsdb_reporter.use_domain_sock: true
   # service & ingress related
   kubernetes.rest-service.exposed.type: ClusterIP
@@ -855,6 +860,8 @@ cloudnative-lq:
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   containerized.taskmanager.env.METRICS_USE_SOCK: true
+  containerized.master.env.MALLOC_ARENA_MAX: 4
+  containerized.taskmanager.env.MALLOC_ARENA_MAX: 4
   metrics.reporter.opentsdb_reporter.use_domain_sock: true
   # service & ingress related
   kubernetes.rest-service.exposed.type: ClusterIP
