--- a/flink-dist/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j.properties
@@ -20,6 +20,7 @@
 rootLogger.level = ${sys:log.level}
 rootLogger.appenderRef.file.ref = MainAppender
 rootLogger.appenderRef.databus.ref = DatabusAppender
+rootLogger.appenderRef.streamlog.ref = LogAgentAppender
 
 # Uncomment this if you want to _only_ change Flink's logging
 #logger.flink.name = org.apache.flink
@@ -58,9 +59,15 @@ appender.databus.metricsChannel = yarn_container_level_log_metrics
 appender.databus.permitsPerSecond = ${sys:log.databus.permitsPerSecond}
 appender.databus.metricsUpdateInterval = 10000
 appender.databus.databusLevel = ${sys:log.databus.level}
-appender.databus.streamlogLevel = ${sys:log.streamlog.level}
 appender.databus.layout.type = PatternLayout
 appender.databus.layout.pattern = db4jv3 %X{ip} %X{hadoop_user} %X{pid} %X{cid} %d{yyyy-MM-dd_HH:mm:ss} %X{yarn_job} %X{yarn_queue} %p %c{1}: %m
+
+appender.streamlog.name = LogAgentAppender
+appender.streamlog.type = org.apache.flink.metrics.databus.LogAgentAppender
+appender.streamlog.filter.threshold.type = ThresholdFilter
+appender.streamlog.filter.threshold.level = ${sys:log.streamlog.level}
+appender.streamlog.layout.type = PatternLayout
+appender.streamlog.layout.pattern = _jobName=%X{yarn_job} _applicationId=%X{application_id} _containerId=%X{cid} _user=%X{user} _podName=%X{pod_name} _yarnQueue=%X{yarn_queue} _hadoopUser=%X{hadoop_user} _loggerName=%c{10} _msg=%msg
 
 # Suppress the irrelevant (wrong) warnings from the Netty channel handler
 logger.netty.name = org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline
