--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -471,6 +471,7 @@ quoka:
   state.backend.cache.lowHeapThreshold: 0.4
   restart-strategy.recoverable-failure-rate.fallback-global-restart: true
   restart-strategy.recoverable-failure-rate.enable: true
+  execution.cancellation.timeout.enable: true
 
 quaga:
   dc: cn
