[#2291543] Change oci rds password for 1.9

--- a/flink-streaming-java/src/main/resources/conf/flink_jobmeta_ss_db.conf
+++ b/flink-streaming-java/src/main/resources/conf/flink_jobmeta_ss_db.conf
@@ -45,5 +45,12 @@ mysql {
     ss_write_user: "flink_meta_w"
     ss_write_password: "hnMKTZah02bBAJX_pfrDtQw6fHMossEF"
   }
+  "flink_meta_us_ttp": {
+    ss_db_name: "flink_meta_us_ttp"
+    ss_write_host: "consul:toutiao.mysql.flink_meta_us_ttp_write?ip"
+    ss_write_port: 3318
+    ss_write_user: "flink_meta_us_w"
+    ss_write_password: "clmMQz63Ud7d9ud_DP8SX1iK6YzvMzaU"
+  }
 }
 
