--- a/flink-cloud-shuffle/pom.xml
+++ b/flink-cloud-shuffle/pom.xml
@@ -47,6 +47,7 @@ under the License.
             <groupId>com.bytedance.inf</groupId>
             <artifactId>css-service_${scala.binary.version}</artifactId>
             <version>${css.version}</version>
+			<scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -95,6 +96,7 @@ under the License.
             <groupId>com.bytedance.inf</groupId>
             <artifactId>css-api</artifactId>
             <version>${css.version}</version>
+			<scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -111,6 +113,7 @@ under the License.
             <groupId>com.bytedance.inf</groupId>
             <artifactId>css-client_${scala.binary.version}</artifactId>
             <version>${css.version}</version>
+			<scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -130,6 +133,7 @@ under the License.
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
+			<scope>provided</scope>
 		</dependency>
     </dependencies>
 
